--- a/Todolist-v1/views/list.ejs
+++ b/Todolist-v1/views/list.ejs
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>To Do List</title>
-  </head>
-  <body>
+
+ <%- include("header") -%>
+
     <div class="box" id="heading">
       <h1><%=listTitle%></h1>
     </div>
@@ -27,10 +20,12 @@
           placeholder="New Item"
           autocomplete="off"
         />
-        //There is a differences when we use "" insead of nothing in below part. when we use "" it gets all the string value. With nothing it gets only 
-        // the first value of the string. Be carefull when you use that kind of things. 
+         <% /*There is a differences when we use "" insead of nothing in below part. when we use "" it gets all the string value. With nothing it gets only 
+        the first value of the string. Be carefull when you use that kind of things. */%>
         <button type="submit" name="list" value= <%=listTitle%>> +</button>
       </form>
     </div>
-  </body>
-</html>
+
+
+  
+    <%- include("footer") -%>
