--- a/FullyCss/01-Natours/starter/css/style.css
+++ b/FullyCss/01-Natours/starter/css/style.css
@@ -56,6 +56,7 @@ body {
 .heading-primary {
   text-transform: uppercase;
   color: #fff;
+  backface-visibility: hidden; /* Prevents flickering */
 }
 
 .heading-primary-main {
@@ -63,6 +64,13 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+
+  /* animation-delay: 3s;
+  animation-iteration-count: 3; 
+  */
 }
 
 .heading-primary-sub {
@@ -70,4 +78,39 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+
+  animation-name: moveInRight;
+  animation-duration: 1s;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(+100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
