Understangin outline part, generally apperas in focus

--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -86,6 +86,9 @@ button:active {
   background-color: white;
   color: #0e4f1f;
 }
+.button:focus {
+  outline: none;
+}
 /* h1 {
     font-family: sans-serif;
 } */
