Starting new section

--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -89,6 +89,17 @@ button:active {
 .button:focus {
   outline: none;
 }
+
+#key-features {
+  background: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features .section-title {
+  color: white;
+  margin: 32px;
+}
 /* h1 {
     font-family: sans-serif;
 } */
@@ -138,11 +149,6 @@ button:active {
 .main-nav__item a:active {
   color: white;
   border-bottom: 5px solid white;
-}
-
-p::first-letter {
-  color: red;
-  font-size: 24px;
 }
 
 .main-nav__item--cta a {
