--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -191,3 +191,9 @@ button:active {
   background-color: white;
   border: none;
 }
+
+.main-footer {
+  background-color: black;
+  padding: 32px;
+  margin-top: 48px;
+}
