--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -1,8 +1,15 @@
 #product-overview {
-  background: url(./freedom.jpg);
+  /* background: url(./freedom.jpg); */
+  background-image: url(./freedom.jpg);
+  background-size: 100% 100%; /*use cover mostly*/
+  background-position: left 10% bottom 20%;
+  /* background-repeat: no-repeat; */
+  /* background-repeat: repeat-x; */
+  background-repeat: no-repeat;
   width: 100%;
-  height: 328px;
-  padding: 20px;
+  height: 528px;
+  padding: 10px;
+  position: relative;
 }
 
 .section-title {
@@ -13,6 +20,9 @@
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
@@ -22,39 +32,42 @@
 }
 
 .plan {
-  background-color: #d5ffdc;
+  background: #d5ffdc;
   text-align: center;
   padding: 16px;
   margin: 8px;
   display: inline-block;
   width: 30%;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
-.plan--highligthed {
-  background-color: #19b84c;
+.plan--highlighted {
+  background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
-  background-color: white;
+  background: white;
   color: #19b84c;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  padding: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
 }
+
 .plan__title {
   color: #0e4f1f;
 }
+
 .plan__price {
   color: #858585;
 }
 
-.plan--highligthed .plan__title {
+.plan--highlighted .plan__title {
   color: white;
 }
 
-.plan--highligthed .plan__price {
+.plan--highlighted .plan__price {
   color: #0e4f1f;
 }
 
@@ -63,28 +76,9 @@
   margin: 0;
   padding: 0;
 }
-.plan__feature {
-  margin: 8px 0px;
-  list-style: none;
-}
 
-.button {
-  background-color: #0e4f1f;
-  color: white;
-  font-family: inherit;
-  border: 1.5px solid #0e4f1f;
-  padding: 8px;
-  border-radius: 8px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.button:hover,
-button:active {
-  background-color: white;
-  color: #0e4f1f;
-}
-.button:focus {
-  outline: none;
+.plan__feature {
+  margin: 8px 0;
 }
 
 #key-features {
@@ -104,6 +98,7 @@ button:active {
   padding: 0;
   text-align: center;
 }
+
 .key-feature {
   display: inline-block;
   width: 30%;
@@ -116,7 +111,7 @@ button:active {
   height: 128px;
   border: 2px solid #424242;
   border-radius: 50%;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .key-feature__description {
@@ -125,6 +120,7 @@ button:active {
   color: white;
   font-size: 20px;
 }
+
 /* h1 {
     font-family: sans-serif;
 } */
