--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -6,10 +6,14 @@
   /* background-repeat: no-repeat; */
   /* background-repeat: repeat-x; */
   background-repeat: no-repeat;
+  background-origin: border-box;
+  background-clip: border-box;
+  /* background-attachment: fixed; */
   width: 100%;
   height: 528px;
   padding: 10px;
   position: relative;
+  /* border: 5px dashed red; */
 }
 
 .section-title {
