--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -1,13 +1,14 @@
 #product-overview {
-  /* background: url(./freedom.jpg); */
-  background-image: url(./freedom.jpg);
-  background-size: 100% 100%; /*use cover mostly*/
-  background-position: left 10% bottom 20%;
+  background: url(images/freedom.jpg) left 10% bottom 20% / cover no-repeat
+    border-box;
+  /* background-image: url(./freedom.jpg); */
+  /* background-size: 100% 100%; /*use cover mostly*/
+  /* background-position: left 10% bottom 20%; */
   /* background-repeat: no-repeat; */
   /* background-repeat: repeat-x; */
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-origin: border-box;
-  background-clip: border-box;
+  background-clip: border-box; */
   /* background-attachment: fixed; */
   width: 100%;
   height: 528px;
