--- a/FullyCss/Css-Basics/Css-BoxModel/main.css
+++ b/FullyCss/Css-Basics/Css-BoxModel/main.css
@@ -1,6 +1,6 @@
 #product-overview {
-  background: url(images/freedom.jpg) left 10% bottom 20% / cover no-repeat
-    border-box;
+  background: linear-gradient(to top, rgba(80, 68, 28, 0.6) 10%, transparent),
+    url(images/freedom.jpg) left 10% bottom 20% / cover no-repeat border-box;
   /* background-image: url(./freedom.jpg); */
   /* background-size: 100% 100%; /*use cover mostly*/
   /* background-position: left 10% bottom 20%; */
@@ -10,6 +10,9 @@
   background-origin: border-box;
   background-clip: border-box; */
   /* background-attachment: fixed; */
+
+  /* background-image: linear-gradient(red, blue); */
+  /* background-image: radial-gradient(circle, red, blue); */
   width: 100%;
   height: 528px;
   padding: 10px;
@@ -117,6 +120,7 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: auto;
+  padding: 20px;
 }
 
 .key-feature__description {
